--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /WebAPI/appsettings.json
+/WebAPI/WebAPI/student-51e6a-firebase-adminsdk-ix2ag-c9ca6c389c.json
