--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=123456"
+        "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=12345"
         //"Server=(local);uid=sa;pwd=12345;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
         //"Server=database.purintech.id.vn;uid=sa;pwd=<Hu@nH0aH0n9>;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
     },
@@ -17,5 +17,13 @@
         "Audience": "YourAppAudience",
         "AccessTokenExpiryMinutes": 15,
         "RefreshTokenExpiryDays": 7
+    },
+    "EmailSettings": {
+        "Server": "smtp.gmail.com",
+        "Port": 587,
+        "SenderName": "FCinema",
+        "SenderEmail": "fmoviecinema@gmail.com",
+        "SenderPassword": "jurk cvow hmtg dovz",
+        "EnableSsl": true
     }
 }
