[Fix] Change parameter id to email ResetPassword api

--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -19,11 +19,12 @@
         "RefreshTokenExpiryDays": 7
     },
     "EmailSettings": {
-        "Server": "smtp.gmail.com",
-        "Port": 587,
+        "SmtpServer": "smtp.gmail.com",
+        "SmtpPort": 587,
         "SenderName": "FCinema",
         "SenderEmail": "fmoviecinema@gmail.com",
-        "SenderPassword": "jurk cvow hmtg dovz",
+        "Username": "fmoviecinema@gmail.com",
+        "Password": "jurk cvow hmtg dovz",
         "EnableSsl": true
     }
 }
