--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
 	<PackageReference Include="FirebaseAdmin" Version="3.2.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.3.0" />
+	<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
