--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -1,30 +1,37 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=123456"
-        //"Server=(local);uid=sa;pwd=12345;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
-        //"Server=database.purintech.id.vn;uid=sa;pwd=<Hu@nH0aH0n9>;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
-    },
-    "JwtSettings": {
-        "SecretKey": "GvlKp62o31vaP3WzWsQDO3hOQpZdbhtt",
-        "Issuer": "YourAppName",
-        "Audience": "YourAppAudience",
-        "AccessTokenExpiryMinutes": 15,
-        "RefreshTokenExpiryDays": 7
-    },
-    "EmailSettings": {
-        "SmtpServer": "smtp.gmail.com",
-        "SmtpPort": 587,
-        "SenderName": "FCinema",
-        "SenderEmail": "fmoviecinema@gmail.com",
-        "Username": "fmoviecinema@gmail.com",
-        "Password": "jurk cvow hmtg dovz",
-        "EnableSsl": true
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Local": "Host=localhost;Port=5432;Database=MovieTheaterr;Username=postgres;Password=1234567890"
+    //"Server=(local);uid=sa;pwd=12345;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
+    //"Server=database.purintech.id.vn;uid=sa;pwd=<Hu@nH0aH0n9>;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
+  },
+  "JwtSettings": {
+    "SecretKey": "GvlKp62o31vaP3WzWsQDO3hOQpZdbhtt",
+    "Issuer": "YourAppName",
+    "Audience": "YourAppAudience",
+    "AccessTokenExpiryMinutes": 15,
+    "RefreshTokenExpiryDays": 7
+  },
+  "VnpaySettings": {
+    "TmnCode": "FMKBQURC",
+    "HashSecret": "ID4X6DY3MQBGY6972GYCKP7SU9YUX0WV",
+    "PayUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "https://localhost:7093/api/Payment/vnpay-return"
+  },
+
+  " EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "FCinema",
+    "SenderEmail": "fmoviecinema@gmail.com",
+    "Username": "fmoviecinema@gmail.com",
+    "Password": "jurk cvow hmtg dovz",
+    "EnableSsl": true
+  }
 }
