--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -18,11 +18,16 @@
     "AccessTokenExpiryMinutes": 15,
     "RefreshTokenExpiryDays": 7
   },
-  "VnpaySettings": {
-    "TmnCode": "FMKBQURC",
-    "HashSecret": "ID4X6DY3MQBGY6972GYCKP7SU9YUX0WV",
+  "VnPay": {
+    "TmnCode": "7QRTMNBH",
+    "HashSecret": "4046G9C8YY9H8WFSJG8AVB9VZNTT1D68",
     "PayUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://localhost:7093/api/Payment/vnpay-return"
+    "Version": "2.1.0",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "http://localhost:5030/api/Payment/vnpay-return/order",
+    "PaymentBackReturnUrll": "http://localhost:5030/api/Payment/vnpay-return/subscription"
   },
 
   " EmailSettings": {
