--- a/WebAPI/ZTest/ZTest.csproj
+++ b/WebAPI/ZTest/ZTest.csproj
@@ -26,4 +26,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestResults\" />
+  </ItemGroup>
+
 </Project>
