--- a/WebAPI/Infrastructure/Infrastructure.csproj
+++ b/WebAPI/Infrastructure/Infrastructure.csproj
@@ -44,4 +44,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
