--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,12 +23,16 @@ stages:          # List of stages for jobs, and their order of execution
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
+  tags:
+    - larry  # Specify the runner tag
   script:
     - echo "Compiling the code..."
     - echo "Compile complete."
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
+  tags:
+    - larry  # Specify the runner tag
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - sleep 60
@@ -36,6 +40,8 @@ unit-test-job:   # This job runs in the test stage.
 
 lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
+  tags:
+    - larry  # Specify the runner tag
   script:
     - echo "Linting code... This will take about 10 seconds."
     - sleep 10
