--- a/WebAPI/docker-compose.yml
+++ b/WebAPI/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   api:
     build:
       context: .
-      dockerfile: ./WebAPI/Dockerfile
+      dockerfile: ./Dockerfile
     ports:
       - "5030:5030"        # Chỉ HTTP
     depends_on:
