--- a/WebAPI/.gitlab-ci.yml
+++ b/WebAPI/.gitlab-ci.yml
@@ -56,5 +56,5 @@ deploy-job:      # This job runs in the deploy stage.
     - - echo "Using token to push to GitLab..."
     - git config --global user.email "ci@gitlab.com"
     - git config --global user.name "CI Bot"
-    - git remote set-url origin https://gitlab-ci-token:${GITLAB_TOKEN}@gitlab.com/${CI_PROJECT_PATH}.git
+    - git remote set-url origin https://gitlab-ci-token:${GITLAB_TOKEN}@git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git
     - git push origin main
