--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,5 +50,5 @@ deploy-job:      # This job runs in the deploy stage.
     - echo "Using token to push to GitLab..."
     - git config --global user.email "ci@gitlab.com"
     - git config --global user.name "CI Bot"
-    - git remote set-url origin https://gitlab-ci-token:${PRIVATE_TOKEN}@gitlab.com/${CI_PROJECT_PATH}.git
+    - git remote set-url origin https://gitlab-ci-token:${GITLAB_TOKEN}@gitlab.com/${CI_PROJECT_PATH}.git
     - git push origin main
