--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ lint-test-job:   # This job also runs in the test stage.
   script:
     - echo "Linting code... This will take about 10 seconds."
     - sleep 10
-    - echo "No lint issues found."
+    - echo "No issues found."
     
 
 deploy-job:      # This job runs in the deploy stage.
