Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
   DOCKER_TLS_CERTDIR: ""
   DOCKER_HOST: tcp://docker:2375
   
-  # Azure configuration
+  # Azure configuratio
   RESOURCE_GROUP: "MovieTheater"
   ACR_NAME: "movietheaterfsamainregistry"
   CONTAINER_APP_NAME: "movietheater-api"
