--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ stages:          # List of stages for jobs, and their order of execution
   - deploy
   
 
-build-job:       # This job runs in the build stage, which runs first.
+build-job:       # This job runs in the build stage, which run first.
   stage: build
   script:
     - echo "Compiling the code..."
