--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ prepare:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   script:
     - apk add --no-cache git curl jq
-    # Configure Git authentication with personal token
+    # Configure Git authentication with personal toke
     - echo "Configuring Git credentials..."
     - git config --global credential.helper store
     - echo "https://${GIT_USERNAME}:${GITLAB_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
