--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=1234567890"
+    "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=123456"
     //"Server=(local);uid=sa;pwd=12345;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
     //"Host=database.purintech.id.vn;Port=5432;Database=MovieTheater;Username=postgres;Password=<Hu@nH0aH0n9>;"
   },
