--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ deploy_dev:
   tags:
     - deploy
   script:
-    - echo "Deployin to deelopment srver..."
+    - echo "Deployin to deelopment er..."
 
 deploy_prod:
   stage: deploy_prod
