--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ stages:
 build-job:
   stage: build
   tags:
-    - larry
+    - deploy
   script:
     - echo "Starting .NET build process..."
     - cd WebAPI
@@ -33,7 +33,8 @@ build-job:
       - WebAPI/WebAPI/bin/Release/
       - WebAPI/Application/bin/Release/
       - WebAPI/Domain/bin/Release/
-      - WebAPI/Infrastructure/bin/Release/    expire_in: 1 hour
+      - WebAPI/Infrastructure/bin/Release/
+    expire_in: 1 hour
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
@@ -41,7 +42,7 @@ build-job:
 unit-test-job:
   stage: test
   tags:
-    - larry
+    - deploy
   dependencies:
     - build-job
   script:
@@ -50,12 +51,12 @@ unit-test-job:
     - dotnet test ZTest/ZTest.csproj --configuration Release --no-build --logger trx --results-directory TestResults/
     - echo "Unit tests completed!"
   artifacts:
-    when: always
-    paths:
+    when: always    paths:
       - WebAPI/TestResults/
     reports:
       junit:
-        - WebAPI/TestResults/*.trx    expire_in: 1 week
+        - WebAPI/TestResults/*.trx
+    expire_in: 1 week
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
@@ -63,14 +64,15 @@ unit-test-job:
 lint-test-job:
   stage: test
   tags:
-    - larry
+    - deploy
   dependencies:
     - build-job
   script:
     - echo "Running code analysis..."
     - cd WebAPI
     - dotnet format --verify-no-changes --verbosity diagnostic WebAPI.sln || echo "Code formatting issues found"
-    - echo "Code analysis completed!"  allow_failure: true
+    - echo "Code analysis completed!"
+  allow_failure: true
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
@@ -78,7 +80,7 @@ lint-test-job:
 docker-build-job:
   stage: docker
   tags:
-    - larry
+    - deploy
   dependencies:
     - build-job
   services:
@@ -96,7 +98,8 @@ docker-build-job:
     - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA .
     - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest .
     - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
-    - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest    - echo "Docker image built and pushed successfully!"
+    - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest
+    - echo "Docker image built and pushed successfully!"
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
@@ -104,7 +107,7 @@ docker-build-job:
 deploy-staging:
   stage: deploy
   tags:
-    - larry
+    - deploy
   dependencies:
     - docker-build-job
   environment:
@@ -114,7 +117,8 @@ deploy-staging:
     - echo "Deploying to staging environment..."
     - docker-compose -f docker-compose.yml down || true
     - docker-compose -f docker-compose.yml pull
-    - docker-compose -f docker-compose.yml up -d    - echo "Application deployed to staging!"
+    - docker-compose -f docker-compose.yml up -d
+    - echo "Application deployed to staging!"
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
@@ -122,7 +126,7 @@ deploy-staging:
 deploy-production:
   stage: deploy
   tags:
-    - larry
+    - deploy
   dependencies:
     - docker-build-job
   environment:
@@ -132,7 +136,8 @@ deploy-production:
     - echo "Deploying to production environment..."
     - docker-compose -f docker-compose.yml down || true
     - docker-compose -f docker-compose.yml pull
-    - docker-compose -f docker-compose.yml up -d    - echo "Application deployed to production!"
+    - docker-compose -f docker-compose.yml up -d
+    - echo "Application deployed to production!"
   when: manual
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
