--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,6 @@ variables:
 stages:
   - build
   - test
-  - docker
-  - deploy
 
 # Restore and build the .NET solution
 build-job:
@@ -77,68 +75,68 @@ lint-test-job:
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Build and push Docker image
-docker-build-job:
-  stage: docker
-  tags:
-    - deploy
-  dependencies:
-    - build-job
-  services:
-    - docker:dind
-  variables:
-    DOCKER_HOST: tcp://docker:2376
-    DOCKER_TLS_CERTDIR: "/certs"
-    DOCKER_TLS_VERIFY: 1
-    DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
-  before_script:
-    - docker info
-    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
-  script:
-    - echo "Building Docker image..."
-    - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA .
-    - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest .
-    - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
-    - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest
-    - echo "Docker image built and pushed successfully!"
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+# Build and push Docker image (DISABLED for now)
+# docker-build-job:
+#   stage: docker
+#   tags:
+#     - deploy
+#   dependencies:
+#     - build-job
+#   image: docker:24.0.5
+#   services:
+#     - docker:24.0.5-dind
+#   variables:
+#     DOCKER_TLS_CERTDIR: "/certs"
+#   before_script:
+#     - docker info
+#     - echo "Logging in to GitLab Container Registry..."
+#     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+#   script:
+#     - echo "Building Docker image..."
+#     - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA .
+#     - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest .
+#     - echo "Pushing Docker images..."
+#     - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
+#     - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest
+#     - echo "Docker image built and pushed successfully!"
+#   rules:
+#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Deploy to staging
-deploy-staging:
-  stage: deploy
-  tags:
-    - deploy
-  dependencies:
-    - docker-build-job
-  environment:
-    name: staging
-    url: http://staging.team03-api.local
-  script:
-    - echo "Deploying to staging environment..."
-    - docker-compose -f docker-compose.yml down || true
-    - docker-compose -f docker-compose.yml pull
-    - docker-compose -f docker-compose.yml up -d
-    - echo "Application deployed to staging!"
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+# Deploy to staging (DISABLED for now)
+# deploy-staging:
+#   stage: deploy
+#   tags:
+#     - deploy
+#   dependencies:
+#     - docker-build-job
+#   environment:
+#     name: staging
+#     url: http://staging.team03-api.local
+#   script:
+#     - echo "Deploying to staging environment..."
+#     - docker-compose -f docker-compose.yml down || true
+#     - docker-compose -f docker-compose.yml pull
+#     - docker-compose -f docker-compose.yml up -d
+#     - echo "Application deployed to staging!"
+#   rules:
+#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Deploy to production
-deploy-production:
-  stage: deploy
-  tags:
-    - deploy
-  dependencies:
-    - docker-build-job
-  environment:
-    name: production
-    url: http://team03-api.production.local
-  script:
-    - echo "Deploying to production environment..."
-    - docker-compose -f docker-compose.yml down || true
-    - docker-compose -f docker-compose.yml pull
-    - docker-compose -f docker-compose.yml up -d
-    - echo "Application deployed to production!"
-  when: manual
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+# Deploy to production (DISABLED for now)
+# deploy-production:
+#   stage: deploy
+#   tags:
+#     - deploy
+#   dependencies:
+#     - docker-build-job
+#   environment:
+#     name: production
+#     url: http://team03-api.production.local
+#   script:
+#     - echo "Deploying to production environment..."
+#     - docker-compose -f docker-compose.yml down || true
+#     - docker-compose -f docker-compose.yml pull
+#     - docker-compose -f docker-compose.yml up -d
+#     - echo "Application deployed to production!"
+#   when: manual
+#   rules:
+#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
