--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,14 @@ variables:
   DOCKER_IMAGE_NAME: "team03-webapi"
   DOCKER_REGISTRY: "registry.gitlab.com"
   TARGET_BRANCH: "CICD_2"  # Thay đổi branch này khi cần
+  
+  # Git Access Configuration
+  GIT_STRATEGY: fetch
+  GIT_DEPTH: 20
+  
+  # These should be set in GitLab CI/CD Variables (Settings > CI/CD > Variables)
+  # GIT_ACCESS_TOKEN: $GIT_ACCESS_TOKEN  # Set this in GitLab Variables
+  # GIT_USERNAME: $GIT_USERNAME          # Set this in GitLab Variables
 
 stages:
   - build
@@ -19,6 +27,18 @@ build-job:
   stage: build
   tags:
     - deploy
+  before_script:
+    - echo "Configuring Git authentication..."
+    - |
+      if [ -n "$GIT_ACCESS_TOKEN" ] && [ -n "$GIT_USERNAME" ]; then
+        echo "Setting up Git credentials with access token"
+        git config --global credential.helper store
+        echo "https://$GIT_USERNAME:$GIT_ACCESS_TOKEN@gitlab.com" > ~/.git-credentials
+        git config --global user.name "$GIT_USERNAME"
+        git config --global user.email "$GIT_USERNAME@example.com"
+      else
+        echo "Warning: GIT_ACCESS_TOKEN or GIT_USERNAME not set"
+      fi
   script:
     - echo "Starting .NET build process..."
     - cd WebAPI
@@ -31,8 +51,7 @@ build-job:
       - WebAPI/WebAPI/bin/Release/
       - WebAPI/Application/bin/Release/
       - WebAPI/Domain/bin/Release/
-      - WebAPI/Infrastructure/bin/Release/
-    expire_in: 1 hour
+      - WebAPI/Infrastructure/bin/Release/    expire_in: 1 hour
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
